--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,10 +3,16 @@ unbind C-b
 # set-option -g prefix C-q
 # bind C-q send-prefix
 
-# Temporarily make prefix key C-j
+# Temporarily make prefix key C-/
 # until my elbow gets better
-set-option -g prefix C-j
+set-option -g prefix "C-\\"
 bind C-j send-prefix
+
+# temporary rebinds for elbow
+unbind l
+unbind k
+bind   l choose-tree -Zw
+bind   k new-window
 
 # reload config using prefix r
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded"
