--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,12 +1,8 @@
 # Make prefix key C-q
 unbind C-b
-# set-option -g prefix C-q
-# bind C-q send-prefix
+set-option -g prefix C-q
+bind C-q send-prefix
 
-# Temporarily make prefix key C-/
-# until my elbow gets better
-set-option -g prefix "C-\\"
-bind C-j send-prefix
 
 # temporary rebinds for elbow
 unbind l
