--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,13 +3,6 @@ unbind C-b
 set-option -g prefix C-q
 bind C-q send-prefix
 
-
-# temporary rebinds for elbow
-unbind l
-unbind k
-bind   l choose-tree -Zw
-bind   k new-window
-
 # reload config using prefix r
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded"
 
@@ -27,10 +20,22 @@ bind | split-window -h
 bind - split-window -v
 
 # Switch panes with arrow keys
-bind -n M-S-Left  select-pane -L
-bind -n M-S-Right select-pane -R
-bind -n M-S-Up    select-pane -U
-bind -n M-S-Down  select-pane -D
+bind -n M-Left    select-pane -L
+bind -n M-Right   select-pane -R
+bind -n M-Up      select-pane -U
+bind -n M-Down    select-pane -D
+bind -n M-a       select-pane -L
+bind -n M-d       select-pane -R
+bind -n M-w       select-pane -U
+bind -n M-s       select-pane -D
+bind -n M-C-Left  resize-pane -L
+bind -n M-C-Right resize-pane -R
+bind -n M-C-Up    resize-pane -U
+bind -n M-C-Down  resize-pane -D
+bind -n M-C-a     resize-pane -L
+bind -n M-C-d     resize-pane -R
+bind -n M-C-w     resize-pane -U
+bind -n M-C-s     resize-pane -D
 
 # search using C-M-m
 bind -n C-M-m copy-mode \; command-prompt -i -I "#{pane_search_string}" -p "(search up)" "send -X search-backward-incremental \"%%%\""
