reprogram arrow keys and buffer/window manipulationshortcuts. i3 config should have been added a while ago. emacs27

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,27 +15,31 @@ set-option -g history-limit 1000000
 # allow mouse events (primarily for mousewheel scrolling)
 set -g mouse on
 
+# l == list
+unbind l
+bind l choose-tree -Zw
+
 # Vertical/horizontal split panes with | and -
 bind | split-window -h
 bind - split-window -v
 
-# Switch panes with arrow keys
+# Select/resize
 bind -n M-Left    select-pane -L
 bind -n M-Right   select-pane -R
 bind -n M-Up      select-pane -U
 bind -n M-Down    select-pane -D
-bind -n M-a       select-pane -L
-bind -n M-d       select-pane -R
-bind -n M-w       select-pane -U
-bind -n M-s       select-pane -D
+bind -n M-j       select-pane -L
+bind -n M-l       select-pane -R
+bind -n M-i       select-pane -U
+bind -n M-k       select-pane -D
 bind -n M-C-Left  resize-pane -L
 bind -n M-C-Right resize-pane -R
 bind -n M-C-Up    resize-pane -U
 bind -n M-C-Down  resize-pane -D
-bind -n M-C-a     resize-pane -L
-bind -n M-C-d     resize-pane -R
-bind -n M-C-w     resize-pane -U
-bind -n M-C-s     resize-pane -D
+bind -n M-C-j     resize-pane -L
+bind -n M-C-l     resize-pane -R
+bind -n M-C-i     resize-pane -U
+bind -n M-C-k     resize-pane -D
 
 # search using C-M-m
 bind -n C-M-m copy-mode \; command-prompt -i -I "#{pane_search_string}" -p "(search up)" "send -X search-backward-incremental \"%%%\""
