--- a/i3/config
+++ b/i3/config
@@ -16,9 +16,6 @@ set $compton_config /etc/regolith/compton/config
 # path to terminal. Override this to specify a custom terminal.
 set $terminal_path /usr/bin/i3-sensible-terminal
 
-# path to i3-wk-switch script, for xmonad-like switching?
-set $x_switch exec --no-startup-id /etc/regolith/i3/i3-wk-switch
-
 # Color values are defined in ~/.Xresources-regolith
 # These are the labels which define each i3 workspace.
 set_from_resource $ws1  i3-wm.workspace.01.name "1"
@@ -43,8 +40,6 @@ set_from_resource $ws19 i3-wm.workspace.19.name "19"
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
-
-hide_edge_borders smart
 
 # start a terminal
 bindsym $mod+Return exec $terminal_path
@@ -185,48 +180,18 @@ bindsym $mod+$alt+k move workspace to output down
 
 
 # Disable titlebar
-new_window pixel 1
-new_float pixel 1
+hide_edge_borders smart
+default_border pixel 1
 
-# Gaps (i3-gaps)
-gaps inner 5
-gaps outer 0
+# class                 border  backgr. text    indicator child_border
+client.focused          #4c7899 #285577 #ffffff #2e9ef4   #00a000
+client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
+client.unfocused        #333333 #222222 #888888 #292d2e   #0000a0
+client.urgent           #2f343a #900000 #ffffff #900000   #900000
+client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
 
-# Only enable gaps on a workspace when there is at least one container
-smart_gaps on
+client.background       #ffffff
 
-
-set_from_resource $focused.color.border i3-wm.client.focused.color.border "#002b36"
-set_from_resource $focused.color.background i3-wm.client.focused.color.background "#586e75"
-set_from_resource $focused.color.text i3-wm.client.focused.color.text "#fdf6e3"
-set_from_resource $focused.color.indicator i3-wm.client.focused.color.indicator "#268bd2"
-set_from_resource $focused.color.child_border i3-wm.client.focused.color.child_border
-
-set_from_resource $focused_inactive.color.border i3-wm.client.focused_inactive.color.border "#002b36"
-set_from_resource $focused_inactive.color.background i3-wm.client.focused_inactive.color.background "#073642"
-set_from_resource $focused_inactive.color.text i3-wm.client.focused_inactive.color.text "#839496"
-set_from_resource $focused_inactive.color.indicator i3-wm.client.focused_inactive.color.indicator "#073642"
-set_from_resource $focused_inactive.color.child_border i3-wm.client.focused_inactive.color.child_border
-
-set_from_resource $unfocused.color.border i3-wm.client.unfocused.color.border "#002b36"
-set_from_resource $unfocused.color.background i3-wm.client.unfocused.color.background "#073642"
-set_from_resource $unfocused.color.text i3-wm.client.unfocused.color.text "#839496"
-set_from_resource $unfocused.color.indicator i3-wm.client.unfocused.color.indicator "#073642"
-set_from_resource $unfocused.color.child_border i3-wm.client.unfocused.color.child_border
-
-set_from_resource $urgent.color.border i3-wm.client.urgent.color.border "#002b36"
-set_from_resource $urgent.color.background i3-wm.client.urgent.color.background "#dc322f"
-set_from_resource $urgent.color.text i3-wm.client.urgent.color.text "#fdf6e3"
-set_from_resource $urgent.color.indicator i3-wm.client.urgent.color.indicator "#002b36"
-set_from_resource $urgent.color.child_border i3-wm.client.urgent.color.child_border
-
-
-# Window Border color
-# class                 border                             background                         text                               indicator                          child_border
-client.focused          $focused.color.border              $focused.color.background          $focused.color.text                $focused.color.indicator           $focused.color.child_border
-client.focused_inactive $focused_inactive.color.border     $focused_inactive.color.background $focused_inactive.color.text       $focused_inactive.color.indicator  $focused_inactive.color.child_border
-client.unfocused        $unfocused.color.border            $unfocused.color.background        $unfocused.color.text              $unfocused.color.indicator         $unfocused.color.child_border
-client.urgent           $urgent.color.border               $urgent.color.background           $urgent.color.text                 $urgent.color.indicator            $urgent.color.child_border
 
 # Enable popup during fullscreen
 popup_during_fullscreen smart
