--- a/i3/config
+++ b/i3/config
@@ -141,28 +141,49 @@ bindsym $mod+Ctrl+k move container to output down
 bindsym $mod+Ctrl+i move container to output up
 bindsym $mod+Ctrl+l move container to output right
 
-# move focused window to workspace
-bindsym $mod+Ctrl+1 move container to workspace $ws1
-bindsym $mod+Ctrl+2 move container to workspace $ws2
-bindsym $mod+Ctrl+3 move container to workspace $ws3
-bindsym $mod+Ctrl+4 move container to workspace $ws4
-bindsym $mod+Ctrl+5 move container to workspace $ws5
-bindsym $mod+Ctrl+6 move container to workspace $ws6
-bindsym $mod+Ctrl+7 move container to workspace $ws7
-bindsym $mod+Ctrl+8 move container to workspace $ws8
-bindsym $mod+Ctrl+9 move container to workspace $ws9
+# move focused window to waorkspace
+bindsym $mod+Ctrl+1        move container to workspace $ws1
+bindsym $mod+Ctrl+2        move container to workspace $ws2
+bindsym $mod+Ctrl+3        move container to workspace $ws3
+bindsym $mod+Ctrl+4        move container to workspace $ws4
+bindsym $mod+Ctrl+5        move container to workspace $ws5
+bindsym $mod+Ctrl+6        move container to workspace $ws6
+bindsym $mod+Ctrl+7        move container to workspace $ws7
+bindsym $mod+Ctrl+8        move container to workspace $ws8
+bindsym $mod+Ctrl+9        move container to workspace $ws9
+bindsym $mod+Ctrl+0        move container to workspace $ws10
+bindsym $mod+Ctrl+Shift+1  move container to workspace $ws1
+bindsym $mod+Ctrl+Shift+2  move container to workspace $ws2
+bindsym $mod+Ctrl+Shift+3  move container to workspace $ws3
+bindsym $mod+Ctrl+Shift+4  move container to workspace $ws4
+bindsym $mod+Ctrl+Shift+5  move container to workspace $ws5
+bindsym $mod+Ctrl+Shift+6  move container to workspace $ws6
+bindsym $mod+Ctrl+Shift+7  move container to workspace $ws7
+bindsym $mod+Ctrl+Shift+8  move container to workspace $ws8
+bindsym $mod+Ctrl+Shift+9  move container to workspace $ws9
+bindsym $mod+Ctrl+Shift+10 move container to workspace $ws10
 
 # show workspace (on focused screen)
-bindsym $mod+1 workspace $ws1
-bindsym $mod+2 workspace $ws2
-bindsym $mod+3 workspace $ws3
-bindsym $mod+4 workspace $ws4
-bindsym $mod+5 workspace $ws5
-bindsym $mod+6 workspace $ws6
-bindsym $mod+7 workspace $ws7
-bindsym $mod+8 workspace $ws8
-bindsym $mod+9 workspace $ws9
-bindsym $mod+0 workspace $ws10
+bindsym   $mod+1         workspace  $ws1
+bindsym   $mod+2         workspace  $ws2
+bindsym   $mod+3         workspace  $ws3
+bindsym   $mod+4         workspace  $ws4
+bindsym   $mod+5         workspace  $ws5
+bindsym   $mod+6         workspace  $ws6
+bindsym   $mod+7         workspace  $ws7
+bindsym   $mod+8         workspace  $ws8
+bindsym   $mod+9         workspace  $ws9
+bindsym   $mod+0         workspace  $ws10
+bindsym   $mod+Shift+1   workspace  $ws1
+bindsym   $mod+Shift+2   workspace  $ws2
+bindsym   $mod+Shift+3   workspace  $ws3
+bindsym   $mod+Shift+4   workspace  $ws4
+bindsym   $mod+Shift+5   workspace  $ws5
+bindsym   $mod+Shift+6   workspace  $ws6
+bindsym   $mod+Shift+7   workspace  $ws7
+bindsym   $mod+Shift+8   workspace  $ws8
+bindsym   $mod+Shift+9   workspace  $ws9
+bindsym   $mod+Shift+0   workspace  $ws10
 
 # move workspaces between monitors
 bindsym $mod+$alt+Right move workspace to output right
