--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,8 +6,8 @@ bind C-q send-prefix
 # reload config using prefix r
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded"
 
-# Clear history and screen with C-l
-bind -n C-l send-keys -R C-l \; clear-history
+# Clear history and screen with M-C-l
+bind -n M-C-k send-keys -R C-l \; clear-history
 
 # set scrollback buffer size
 set-option -g history-limit 1000000
@@ -41,8 +41,10 @@ bind -n M-C-l     resize-pane -R
 bind -n M-C-i     resize-pane -U
 bind -n M-C-k     resize-pane -D
 
-# search using C-M-m
-bind -n C-M-m copy-mode \; command-prompt -i -I "#{pane_search_string}" -p "(search up)" "send -X search-backward-incremental \"%%%\""
+# copy mode with M-space
+# search using C-M-space
+bind -n M-Space copy-mode
+bind -n C-M-Space copy-mode \; command-prompt -i -I "#{pane_search_string}" -p "(search up)" "send -X search-backward-incremental \"%%%\""
 
 # enter exits copy mode
 bind -T copy-mode Enter send-keys -X cancel
