Aaah, that has been annoying me for so long - clear previous search string on new searches

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,8 +6,8 @@ bind C-q send-prefix
 # reload config using prefix r
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded"
 
-# Clear history and screen with M-C-l
-bind -n M-C-k send-keys -R C-l \; clear-history
+# Clear history and screen with C-q C-l
+bind C-l send-keys -R C-l \; clear-history
 
 # set scrollback buffer size
 set-option -g history-limit 1000000
@@ -44,7 +44,11 @@ bind -n M-C-k     resize-pane -D
 # copy mode with M-space
 # search using C-M-space
 bind -n M-Space copy-mode
-bind -n C-M-Space copy-mode \; command-prompt -i -I "#{pane_search_string}" -p "(search up)" "send -X search-backward-incremental \"%%%\""
+bind -n C-M-Space copy-mode \; command-prompt -i -I "" -p "(search up)" "send -X search-backward-incremental \"%%%\""
+
+# clear search string on new searches
+bind -T copy-mode C-r \; command-prompt -i -I "" -p "(search up)" "send -X search-backward-incremental \"%%%\""
+bind -T copy-mode C-s \; command-prompt -i -I "" -p "(search up)" "send -X search-forward-incremental \"%%%\""
 
 # enter exits copy mode
 bind -T copy-mode Enter send-keys -X cancel
