Range of miscellaneous changes and additions.  - A couple of new shell functions and aliases  - lsp tweaks  - Adjust emacs font size (new external monitor)  - setup_display script for consistent external monitor configuration

--- a/.gitconfig
+++ b/.gitconfig
@@ -8,10 +8,11 @@
   branch = auto
 
 [alias]
-	st   = status -sb
+  sh   = show
+  st   = status -sb
   rv   = remote -v
   co   = checkout
-	ci   = commit
+  ci   = commit
   cp   = cherry-pick
   ps   = push
   b    = branch
