--- a/.tmux.conf
+++ b/.tmux.conf
@@ -54,5 +54,11 @@ bind -T copy-mode C-s \; command-prompt -i -I "" -p "(search up)" "send -X searc
 bind -T copy-mode Enter send-keys -X cancel
 
 # Copy/paste to system clipboard
-bind -T copy-mode MouseDragEnd1Pane send-keys -X copy-pipe            "xclip -selection clipboard -i"
-bind -T copy-mode M-w               send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -i"
+if-shell '[[ $(uname -s) = Linux ]]' {
+  bind -T copy-mode MouseDragEnd1Pane send-keys -X copy-pipe            "xclip -selection clipboard -i"
+  bind -T copy-mode M-w               send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -i"
+}
+if-shell '[[ $(uname -s) = Darwin ]]' {
+  bind -T copy-mode MouseDragEnd1Pane send-keys -X copy-pipe            "pbcopy"
+  bind -T copy-mode M-w               send-keys -X copy-pipe-and-cancel "pbcopy"
+}
