--- a/.gitconfig
+++ b/.gitconfig
@@ -19,6 +19,7 @@
   rb   = rebase
   ss   = stash save
   sp   = stash pop
+  sl   = stash list
   upma = "!git fetch --all && git checkout master && git merge upstream/master"
   bd   = "!git push -d origin $1 && git branch -d $1 #"
   di   = diff --ignore-submodules
