--- a/i3/config
+++ b/i3/config
@@ -268,6 +268,10 @@ exec --no-startup-id /usr/bin/xeventbind resolution /usr/bin/wallpaper-refresh
 
 # Float all FSL GUIs
 for_window [title = "^FSL.*(?<!Firefox)$"]               floating enable
+for_window [title = "^SUSAN.*(?<!Firefox)$"]             floating enable
+for_window [title = "^POSSUM.*(?<!Firefox)$"]            floating enable
+for_window [title = "^.*FMRIB.*(?<!Firefox)$"]           floating enable
+for_window [title = "^FAST.*(?<!Firefox)$"]              floating enable
 for_window [title = "^FDT.*(?<!Firefox)$"]               floating enable
 for_window [title = "^BET.*(?<!Firefox)$"]               floating enable
 for_window [title = "^FEAT.*(?<!Firefox)$"]              floating enable
