--- a/.gitconfig
+++ b/.gitconfig
@@ -22,6 +22,7 @@
   sl   = stash list
   upma = "!git fetch --all && git checkout master && git merge upstream/master"
   bd   = "!git push -d origin $1 && git branch -d $1 #"
+  dt   = difftool
   di   = diff --ignore-submodules
   dis  = diff --ignore-submodules --ignore-space-at-eol
   wd   = diff --word-diff --ignore-submodules
@@ -40,10 +41,23 @@
   pager  = less -RXF
   abbrev = 8
 
-[filter "lfs"]
-	clean    = git-lfs clean -- %f
-	smudge   = git-lfs smudge -- %f
-	process  = git-lfs filter-process
-	required = true
 [init]
 	defaultBranch = main
+[filter "lfs"]
+	required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+
+[diff]
+    tool = mydiff
+
+[difftool]
+    dir-diff = true
+    prompt   = false
+
+[difftool "mydiff"]
+    cmd = ~/bin/mydiff \"$LOCAL\" \"$REMOTE\"
+
+[pager]
+    difftool = true
