--- a/.ssh/config
+++ b/.ssh/config
@@ -1,41 +1,46 @@
 
 Host j
-    HostName            jalapeno.fmrib.ox.ac.uk
+    HostName            jalapeno.cluster.fmrib.ox.ac.uk
     User                paulmc
-    ForwardX11          yes
+    ProxyCommand        sshpass -f ~/.ssh/fmrib_password ssh clint.fmrib.ox.ac.uk -W %h:%p
 
 Host clint
     HostName            clint.fmrib.ox.ac.uk
     User                paulmc
 
+Host fsftp
+    HostName            sftp.fmrib.ox.ac.uk
+    User                paulmc
+    ProxyCommand        sshpass -f ~/.ssh/fmrib_password ssh clint.fmrib.ox.ac.uk -W %h:%p
+
+
 Host j00
     HostName            jalapeno00.cluster.fmrib.ox.ac.uk
     User                paulmc
     ForwardX11          yes
-    ProxyCommand        sshpass -f ~/.ssh/fmrib_password ssh jalapeno.fmrib.ox.ac.uk -W %h:%p
+    ProxyCommand        sshpass -f ~/.ssh/fmrib_password ssh clint.fmrib.ox.ac.uk -W %h:%p
 
 Host j18
     HostName            jalapeno18.cluster.fmrib.ox.ac.uk
     User                paulmc
     ForwardX11          yes
-    ProxyCommand        sshpass -f ~/.ssh/fmrib_password ssh jalapeno.fmrib.ox.ac.uk -W %h:%p
+    ProxyCommand        sshpass -f ~/.ssh/fmrib_password ssh clint.fmrib.ox.ac.uk -W %h:%p
 
 Host j19
     HostName            jalapeno19.cluster.fmrib.ox.ac.uk
     User                paulmc
     ForwardX11          yes
-    ProxyCommand        sshpass -f ~/.ssh/fmrib_password ssh jalapeno.fmrib.ox.ac.uk -W %h:%p
+    ProxyCommand        sshpass -f ~/.ssh/fmrib_password ssh clint.fmrib.ox.ac.uk -W %h:%p
 
 Host cuda03
     HostName            cuda03.cluster.fmrib.ox.ac.uk
     User                paulmc
     ForwardX11          yes
-    ProxyCommand        sshpass -f ~/.ssh/fmrib_password ssh jalapeno.fmrib.ox.ac.uk -W %h:%p
+    ProxyCommand        sshpass -f ~/.ssh/fmrib_password ssh clint.fmrib.ox.ac.uk -W %h:%p
 
 Host macbook
     HostName            192.168.178.3
     User                paulmc
-    ForwardX11          yes
     IdentityFile        /home/paulmc/.ssh/id_macbook
     AddKeysToAgent      yes
 
@@ -56,7 +61,7 @@ Host m1mini
     HostName            miniarm01.services.fmrib.ox.ac.uk
     User                paulmc
     ForwardX11          yes
-    ProxyCommand        sshpass -f ~/.ssh/fmrib_password ssh jalapeno.fmrib.ox.ac.uk -W %h:%p
+    ProxyCommand        sshpass -f ~/.ssh/fmrib_password ssh clint.fmrib.ox.ac.uk -W %h:%p
 
 Host gitlab
     HostName            git.fmrib.ox.ac.uk
