--- a/i3/config
+++ b/i3/config
@@ -40,6 +40,7 @@ focus_wrapping workspace
 
 # start a terminal
 bindsym $mod+Return exec /usr/bin/i3-sensible-terminal
+# bindsym $mod+Return exec /usr/bin/alacritty
 
 # start a file browser
 bindsym $mod+n nautilus
