a range of minor tweaks and fixes

--- a/i3/config
+++ b/i3/config
@@ -7,6 +7,8 @@
 set $mod Mod4
 set $alt Mod1
 
+font pango:DejaVu Sans Mono 10
+
 # Color values are defined in ~/.Xresources-regolith
 # These are the labels which define each i3 workspace.
 set_from_resource $ws1  i3-wm.workspace.01.name "1"
@@ -43,7 +45,7 @@ bindsym $mod+Return exec /usr/bin/i3-sensible-terminal
 # bindsym $mod+Return exec /usr/bin/alacritty
 
 # start a file browser
-bindsym $mod+n nautilus
+bindsym $mod+n exec /usr/bin/nautilus --no-desktop
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -170,7 +172,7 @@ bindsym $mod+Ctrl+Shift+6  move container to workspace $ws6
 bindsym $mod+Ctrl+Shift+7  move container to workspace $ws7
 bindsym $mod+Ctrl+Shift+8  move container to workspace $ws8
 bindsym $mod+Ctrl+Shift+9  move container to workspace $ws9
-bindsym $mod+Ctrl+Shift+10 move container to workspace $ws10
+bindsym $mod+Ctrl+Shift+0  move container to workspace $ws10
 
 # show workspace (on focused screen)
 bindsym   $mod+1         workspace  $ws1
